--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.kiyotakeshi</groupId>
-    <artifactId>gRPC-playground</artifactId>
+    <artifactId>gRPC-protocol-buffer-playground</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
